--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,6 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
-        with:
-          node-version: lts/*
 
       - name: Install Deno
         uses: denoland/setup-deno@v1
@@ -31,11 +29,11 @@ jobs:
           node-version: lts/*
 
       - name: Build step
-        run: "npm install && vuepress build src" # 📝 Update the build command(s) if necessary
+        run: "corepack enable && corepack prepare pnpm@latest --activate && npm install && pnpm docs:build" # 📝 Update the build command(s) if necessary
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
           project: "afraid-dodo-40"
           entrypoint: "index.ts" # 📝 Update the entrypoint if necessary
-          root: "src/.vuepress/dist" # 📝 Update the root if necessary
+          root: "dist" # 📝 Update the root if necessary
