--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,5 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "afraid-dodo-40"
-          entrypoint: "../src/index.ts" # 📝 Update the entrypoint if necessary
+          entrypoint: "index.ts" # 📝 Update the entrypoint if necessary
           root: "dist" # 📝 Update the root if necessary
