--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
         with:
           project: "afraid-dodo-40"
           entrypoint: "index.ts" # 📝 Update the entrypoint if necessary
-          root: "dist" # 📝 Update the root if necessary
+          root: "src" # 📝 Update the root if necessary
