--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "type": "module",
   "scripts": {
     "docs:build": "vuepress build src",
+    "compile": "deno compile --allow-all server.ts",
+    "build": "npm run docs:build && npm run compile && mv server.js dist/index.js",
     "docs:clean-dev": "vuepress dev src --clean-cache",
     "docs:dev": "vuepress dev src"
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.51",
+    "deno": "^0.1.1",
     "vue": "^3.2.29",
     "vuepress": "2.0.0-beta.51",
     "vuepress-theme-hope": "2.0.0-beta.110"
