--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,17 +23,29 @@ jobs:
         with:
           deno-version: v1.x
       
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-modules-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
       
+      
       - name: Install pnmp
         run: "corepack enable && corepack prepare pnpm@latest --activate"
 
-      - name: Build step
-        run: "npm install && pnpm docs:build" # 📝 Update the build command(s) if necessary
+      - name: Install dependencies 
+        run: pnpm install
+    
+      - name: Build
+        run: pnpm docs:build
+
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
