--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,6 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
-      - name: Install Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
-      
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
@@ -30,12 +25,16 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-modules-
+      
+      - name: Install Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
-      
       
       - name: Install pnmp
         run: "corepack enable && corepack prepare pnpm@latest --activate"
@@ -44,10 +43,17 @@ jobs:
         run: pnpm install
     
       - name: Build
-        run: pnpm docs:build
+        run: pnpm docs:build --parallel
+
+      - name: Cache build artifacts
+        uses: actions/cache@v3
+        with:
+          path: dist
+          key: ${{runner.os}}-docs-build-${{hashFiles('package-lock.json')}}
 
 
       - name: Upload to Deno Deploy
+        if: steps.cache.outputs.cache-hit != 'true'  
         uses: denoland/deployctl@v1
         with:
           project: "funny-shrimp-88"
