--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
         run: pnpm install
     
       - name: Build
-        run: pnpm docs:build --parallel
+        run: pnpm docs:build
 
       - name: Cache build artifacts
         uses: actions/cache@v3
