--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.os }}-modules-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/lock.json') }}
           restore-keys: |
             ${{ runner.os }}-modules-
       
@@ -42,20 +42,20 @@ jobs:
       - name: Install dependencies 
         run: pnpm install
     
-      - name: Build
-        run: pnpm docs:build
-
-      - name: Cache build artifacts
+      - name: Cache builds
         uses: actions/cache@v3
         with:
           path: dist
-          key: ${{runner.os}}-docs-build-${{hashFiles('package-lock.json')}}
+          key: ${{ runner.os }}-dist-${{ hashFiles('dist/**/*') }}
 
+      - name: Build
+        if: steps.cache.outputs.cache-hit != 'true'  
+        run: pnpm docs:build --no-clean --hash-files
 
       - name: Upload to Deno Deploy
-        if: steps.cache.outputs.cache-hit != 'true'  
         uses: denoland/deployctl@v1
         with:
           project: "funny-shrimp-88"
-          entrypoint: "https://deno.land/std@0.188.0/http/file_server.ts" # 📝 Update the entrypoint if necessary
+          entrypoint: "https://deno.land/std/http/file_server.ts" # 📝 Update the entrypoint if necessary
           root: "dist" # 📝 Update the root if necessary
+          args: "--changed-only"
