--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Build
         if: steps.cache.outputs.cache-hit != 'true'  
-        run: pnpm docs:build
+        run: pnpm docs:build --hash-files
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
