--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "funny-shrimp-88"
+          project: "bestuid"
           entrypoint: "https://deno.land/std/http/file_server.ts" # 📝 Update the entrypoint if necessary
           root: "dist" # 📝 Update the root if necessary
